# tqsl

./: .gitignore  CMakeLists.txt  INSTALL  README  appimage.sh  osx_createdmg.sh
.github/workflows/: cmake.yml
AppDir/: .DirIcon  AppRun  tqsl.desktop
AppDir/usr/share/applications/: tqsl.desktop
apps/: CMakeLists.txt  ChangeLog.txt  LICENSE.rtf  certtree.cpp  certtree.h  crqwiz.cpp  crqwiz.h  extwizard.cpp  extwizard.h  json_defs.h  jsonreader.cpp  jsonval.cpp  jsonval.h  jsonwriter.cpp  loadcertwiz.cpp  loctree.cpp  makepot.sh  quick  tqsl.cpp  tqsl.rc.in  tqsl_prefs.cpp  tqsl_prefs.h  tqslapp.h  tqslctrls.h  tqslpaths.h  tqslupdater.cpp  tqslwiz.cpp  tqslwiz.h  wxutil.cpp  wxutil.h
apps/help/tqslapp/: addcertaccept.htm  addcertreq.htm  certaccept.htm  certreq.htm  cmdline.htm  installation.htm  pref-log.htm  qsodata.htm  renewing.htm  signing.htm  signupload.htm  stnloc.htm
apps/lang/: makemo.sh  merge.sh  translators
apps/lang/ca_ES/: tqslapp.mo  tqslapp.po
apps/lang/de/: tqslapp.mo  tqslapp.po
apps/lang/es/: tqslapp.mo  tqslapp.po
apps/lang/fi/: tqslapp.mo  tqslapp.po
apps/lang/fr/: tqslapp.mo  tqslapp.po
apps/lang/hi_IN/: tqslapp.mo  tqslapp.po
apps/lang/it/: tqslapp.mo  tqslapp.po
apps/lang/ja/: tqslapp.mo  tqslapp.po
apps/lang/pl_PL/: tqslapp.mo  tqslapp.po
apps/lang/pt/: tqslapp.mo  tqslapp.po
apps/lang/ru/: tqslapp.mo  tqslapp.po
apps/lang/sv_SE/: tqslapp.mo  tqslapp.po
apps/lang/tr_TR/: tqslapp.mo  tqslapp.po
apps/lang/zh/: tqslapp.mo  tqslapp.po
apps/lang/zh_CN/: tqslapp.mo  tqslapp.po
html/trustedqsl/: apiguide.html  faq.html  format_design.html  index-new.html  newindex.html
src/: CMakeLists.txt  ChangeLog.txt  Doxyfile  adif.h  cabrillo.cpp  config.xml  location.cpp  openssl_cert.cpp  openssl_cert.h  tqslconvert.cpp  tqslconvert.h  tqsllib.cpp  tqsllib.h  windirent.h  xml.h
src/doxygen/html/: adif_8h.html  adif_8h_source.html  annotated.html  cabrillo_8h.html  cabrillo_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_d.html  globals_defs.html  globals_enum.html  globals_func.html  globals_t.html  globals_type.html  globals_vars.html  group__ADIF.html  group__Cabrillo.html  group__CertStuff.html  group__Convert.html  group__Data.html  group__Sign.html  group__Util.html  index.html  menudata.js  modules.html  structTQSL__QSO__RECORD-members.html  structTQSL__QSO__RECORD.html  structtQSL__Date-members.html  structtQSL__Date.html  structtQSL__Time-members.html  structtQSL__Time.html  structtqsl__adifFieldDefinitions-members.html  structtqsl__adifFieldDefinitions.html  structtqsl__adifFieldResults-members.html  structtqsl__adifFieldResults.html  structtqsl__cabrilloField-members.html  structtqsl__cabrilloField.html  structtqsl__cert__req__st-members.html  (+10 more)
win32-msi/tqsl-install/: Product.wxs  helpfrag.wxs  langfrags.wxs  tqsl-install.wixproj
